--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+body{
+    margin: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contact-wrapper{
+    display: flex;
+}
+.contact{
+    margin: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-wrapper{
+    display: flex;
+}
+.meme-form{
+    display: grid;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form--button{
+    grid-column: 1/-1;
 }
-
-.App-link {
-  color: #61dafb;
+.meme-image{
+    grid-column: 1/-1;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form--input{
+    text-indent: 10px;
 }
