--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montez&family=Montserrat:wght@300&family=Suranna&display=swap');
+      
+.navbar{
+  display: flex;
+}
+.nav-items{
+  list-style: none;
+  display: flex;
+  font-family: 'Inter', sans-serif;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.meme-logo{
+  width: 100px;
+}
+body{
+  background: url(./images/photo-1464618663641-bbdd760ae84a.avif);
+  background-size: cover;
 }
